--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@babel/core": "^7.15.5",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.2",
+    "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
