--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "YouChoose AI",
   "homepage": "https://youchoose.ai",
   "bugs": "https://github.com/tracking-exposed/YCAI/issues",
+  "private": true,
   "license": "AGPL-3.0",
   "author": "Claudio Agosti, Andrea Ascari, and the https://youchoose.ai team",
   "repository": {
