fix: correctly load the Trex font using url-loader
Our font was not found in the context of the injected HTML on
YouTube because we cannot use relative resources as they
are interpreted as relative to youtube.

The fix is to embed the font in the CSS using the URL
resource loader of webpack.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -45,9 +45,8 @@
         "http://127.0.0.1/*",
         "https://*.youtube.com/*"
       ],
-      "js": ["./app.js"],
-      "css": ["./css/font.css", "./css/popup.css", "./css/dashboard.css"]
+      "js": ["./app.js"]
     }
   ],
-  "web_accessible_resources": ["*.png", "./css/**"]
+  "web_accessible_resources": ["*.png"]
 }
