--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -60,6 +60,9 @@
     "husky": "^7.0.4",
     "jest-chrome": "^0.7.2",
     "prettier": "^2.4.0",
+    "puppeteer": "^11.0.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "react-test-renderer": "^16.0.0",
     "semantic-release": "^18.0.0",
     "style-loader": "^3.3.1",
