--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/nconf": "^0.10.1",
     "@types/supertest": "^2.0.11",
