chore: e2e tests with puppeteer

--- a/YCAI/.env
+++ b/YCAI/.env
@@ -8,3 +8,7 @@ API_URL=http://localhost:9000/api
 WEB_URL=http://localhost:3000
 DATA_DONATION_FLUSH_INTERVAL=10000
 LOGGER=@ycai:*
+
+# test env
+
+PUPPETEER_SLOW_MO=50
