--- a/.github/workflows/ycai_pull_request.yml
+++ b/.github/workflows/ycai_pull_request.yml
@@ -16,7 +16,8 @@ defaults:
 jobs:
   pull_request:
     runs-on: ubuntu-latest
-
+    matrix:
+      mongo-version: [4.2]
     steps:
       - uses: actions/checkout@v2
 
@@ -31,18 +32,42 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install modules
+      - name: Install shared modules
         working-directory: shared
         run: npm i
 
-      - name: Install modules
+      - name: Install YCAI modules
         run: npm i
 
       - name: Lint code
         run: npm run lint
 
-      - name: Build
-        run: npm run build
+      - name: Build extension for tests
+        run: npm run build:dev
 
-      - name: Test
-        run: npm test
+      - name: Test spec
+        run: npm test spec
+
+      - name: Start MongoDB v${{ matrix.mongodb-version }}
+        uses: supercharge/mongodb-github-action@1.2.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+
+      - name: Start api service
+        working-directory: yttrex-backend/backend
+        run: docker-compose up -d api
+
+      - name: Log what's going on in docker
+        working-directory: yttrex-backend/backend 
+        run: docker-compose logs api
+
+      - name: Test Code
+        uses: mujo-code/puppeteer-headful@v2
+        env:
+          CI: true
+        with:
+          args: npm test e2e -- --watchAll=false
+
+      - name: Stop api service
+        working-directory: yttrex-backend/backend
+        run: docker-compose down
