--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -61,6 +61,9 @@
     "jest-chrome": "^0.7.2",
     "mini-css-extract-plugin": "^1.6.2",
     "prettier": "^2.4.0",
+    "puppeteer": "^11.0.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "react-test-renderer": "^16.0.0",
     "semantic-release": "^18.0.0",
     "style-loader": "^3.3.1",
