feat: data donation (#72)

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ BUNDLE_ENABLE_NOTIFY=false
 
 REACT_APP_API_URL=http://localhost:9000/api
 REACT_APP_WEB_URL=http://localhost:3000
+REACT_APP_DATA_DONATION_FLUSH_INTERVAL=10000
 
 REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
 REACT_APP_LOGGER=@ycai:*
