chore: added script to build extension for development env (#103)

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
-    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
-    "build:development": "env-cmd -f .env react-app-rewired build",
+    "build": "DOTENV_CONFIG_PATH=.env.production GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build:dev": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "watch": "node ./scripts/watch",
     "start": "react-app-rewired start",
     "test": "react-app-rewired test",
