--- a/.env
+++ b/.env
@@ -6,12 +6,15 @@ BUNDLE_STATS=false
 BUNDLE_ENABLE_NOTIFY=false
 
 # app env
-
+PUBLIC_URL=http://localhost:3000
 REACT_APP_API_URL=http://localhost:9000/api
 REACT_APP_WEB_URL=http://localhost:3000
 REACT_APP_DATA_DONATION_FLUSH_INTERVAL=10000
 
-REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
+
 REACT_APP_LOGGER=@ycai:*
+
+# this is set at runtime by webpack but needed in tests
+REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
 
 DISABLE_ESLINT_PLUGIN=true
