--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
     "io-ts-types": "^0.5.16",
     "jsdom": "^13.0.0",
     "moment": "^2.29.1",
-    "mongodb3": "npm:mongodb@3.2.3",
+    "mongodb": "^4.1.4",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-fetch": "^2.6.1",
