--- a/methodology/package.json
+++ b/methodology/package.json
@@ -3,7 +3,7 @@
   "version": "1.8.2",
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
-    "pkg": "pkg ./package.json"
+    "pkg": "pkg ./package.json; bin/post-compile.sh"
   },
   "bin": "./bin/guardoni.js",
   "repository": {
