--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "@typescript-eslint/promise-function-async": ["off"],
     "@typescript-eslint/no-redeclare": ["off"],
     "@typescript-eslint/restrict-plus-operands": ["off"],
+    "@typescript-eslint/restrict-template-expressions": ["off"],
     "react/jsx-key": "off"
   }
 }
