fix: ui theming (#108)
* chore: defined theme custom colors

* fix: dashboard sidebar style with new colors

* fix: lab theming fm (#117)

* fix: extract sidebar menu list item in a proper function

Co-authored-by: François-Marie de Jouvencel <fm.de.jouvencel@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,15 @@
     "noEmit": true,
     "allowJs": true,
     "strict": true,
+    "strictNullChecks": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
     "resolveJsonModule": true,
+    "skipDefaultLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "lib": [
       "dom",
-      "esnext"
+      "ESNext"
     ],
     "typeRoots": [
       "node_modules/@types",
@@ -22,15 +24,13 @@
     "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "isolatedModules": true,
-    "skipLibCheck": true
+    "moduleResolution": "Node",
+    "isolatedModules": true
   },
   "include": [
     "./src"
   ],
   "exclude": [
-    "node_modules",
     "public",
     "**/__tests__/**"
   ]
