--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,7 +10,7 @@
     "noUnusedLocals": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["dom", "esnext"],
+    "lib": ["esnext", "dom"],
     "typeRoots": ["node_modules/@types", "typings"],
     "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
