feat: theme improvement by @ascariandrea

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "Node",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src"
