feat: supported screenshotting for advertising

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ methodology/profiles/*
 methodology/executions/*
 methodology/experiments/*
 methodology/extension/*
+methodology/screenshots/*
 
 backend/dump
 backend/experiments/*
