--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
       "jsx": true
     },
     "sourceType": "module",
-    "project": ["./tsconfig.paths.json"]
+    "project": ["./tsconfig.json"]
   },
   "plugins": ["@typescript-eslint", "react"],
   "env": {
