--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "clean": "rm -rf ./build ./dist",
+    "clean": "rm -rf ./build",
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
-    "build": "DOTENV_CONFIG_PATH=.env.production GENERATE_SOURCEMAP=false react-app-rewired build",
-    "build:dev": "GENERATE_SOURCEMAP=false react-app-rewired build",
-    "watch": "node ./scripts/watch",
-    "start": "react-app-rewired start",
-    "test": "react-app-rewired test",
+    "build": "tsc && NODE_ENV=production webpack",
+    "build:dev": "webpack",
+    "watch": "webpack -w",
+    "watch:prod": "DOTENV_CONFIG_PATH=.env.production webpack -w",
+    "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
     "prepack": "npm run build",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@semantic-release/changelog": "^6.0.1",
@@ -39,17 +38,17 @@
     "@types/bs58": "^4.0.1",
     "@types/chrome": "0.0.157",
     "@types/debug": "^4.1.7",
-    "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.176",
+    "@types/jest": "^27.0.3",
     "@types/react": "^16.14.20",
     "@types/react-dom": "^16.9.14",
     "@types/react-test-renderer": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "autoprefixer": "^6.7.7",
-    "chai": "^3.5.0",
+    "buffer": "^6.0.3",
+    "copy-webpack-plugin": "^10.0.0",
+    "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
-    "env-cmd": "^10.1.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -58,60 +57,58 @@
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
     "filemanager-webpack-plugin": "^6.1.7",
-    "glob": "^7.2.0",
     "husky": "^7.0.4",
     "jest-chrome": "^0.7.2",
+    "marked": "^2.1.3",
     "mini-css-extract-plugin": "^1.6.2",
-    "postcss-loader": "^6.2.0",
     "prettier": "^2.4.0",
-    "react-app-rewire-alias": "^1.1.4",
-    "react-app-rewire-multiple-entry": "^2.2.1",
-    "react-app-rewired": "^2.1.8",
     "react-test-renderer": "^16.0.0",
-    "react-transform-hmr": "^1.0.4",
     "semantic-release": "^18.0.0",
-    "typescript": "^4.4.4",
-    "webpack": "4.44.2",
-    "webpack-browser-extension-plugin": "^1.1.0",
+    "style-loader": "^3.3.1",
+    "svgdom": "^0.1.10",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
+    "typescript": "4.4.4",
+    "webpack": "^5.64.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "3.11.1",
-    "webpack-notifier": "^1.14.1",
     "zenroom": "^2.2.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@types/c3": "^0.7.6",
+    "@types/lodash": "^4.14.177",
+    "acorn": "^8.6.0",
     "avenger": "^7.0.1",
     "axios": "^0.22.0",
     "bs58": "^4.0.1",
-    "classnames": "^2.3.1",
+    "c3": "^0.7.20",
     "date-fns": "^2.25.0",
     "debug": "^4.3.2",
-    "fetch-opengraph": "^1.0.30",
     "fp-ts": "^2.11.5",
     "i18next": "^21.4.0",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
-    "jquery": "^3.6.0",
+    "jest": "^27.3.1",
     "lodash": "^4.17.21",
-    "marked": "^0.8.2",
+    "marked": "^4.0.3",
     "moment": "^2.29.1",
+    "monocle-ts": "^2.3.11",
     "nacl": "^0.1.3",
+    "newtype-ts": "^0.3.4",
+    "postcss": "^8.3.11",
     "react": "^16.14.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.13.0",
-    "react-scripts": "^4.0.3",
-    "remote-import": "0.0.11",
     "ts-endpoint": "^2.0.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.13.3",
     "uuid": "^2.0.3",
-    "web-vitals": "^2.1.2",
-    "webpack-external-import": "^1.1.3"
+    "web-vitals": "^2.1.2"
   },
   "browserslist": {
     "production": [
