chore: update package-lock.json (#156)

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install modules
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: npm i
+        run: npm ci
 
   lint:
     runs-on: ubuntu-latest
