--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^16.14.20",
     "@types/react-dom": "^16.9.14",
     "@types/react-test-renderer": "^16.0.0",
+    "@types/swagger-ui": "^3.52.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "buffer": "^6.0.3",
@@ -103,6 +104,7 @@
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.13.0",
+    "swagger-ui": "^4.1.0",
     "ts-endpoint": "^2.0.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.13.3",
