--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -12,12 +12,11 @@
     "url": "git+https://github.com/tracking-exposed/YCAI.git"
   },
   "scripts": {
-    "prepare": "husky install",
     "clean": "rm -rf ./build",
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
-    "build": "tsc && NODE_ENV=production webpack",
+    "build": "tsc --build && NODE_ENV=production webpack",
     "build:dev": "webpack",
     "watch": "webpack -w",
     "watch:prod": "DOTENV_CONFIG_PATH=.env.production webpack -w",
@@ -68,7 +67,7 @@
     "svgdom": "^0.1.10",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "typescript": "4.4.4",
+    "typescript": "^4.5.2",
     "webpack": "^5.64.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
