fix: renamed @backend alias to @shared

--- a/YCAI/tsconfig.json
+++ b/YCAI/tsconfig.json
@@ -28,7 +28,7 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "paths": {
-      "@backend/*": ["../../shared/*"]
+      "@shared/*": ["../../shared/*"]
     }
   },
   "references": [
