--- a/YCAI/tsconfig.json
+++ b/YCAI/tsconfig.json
@@ -28,7 +28,7 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "paths": {
-      "@shared/*": ["../../shared/*"]
+      "@shared/*": ["../../shared/src/*"]
     }
   },
   "references": [
