chore: add path filters to workflows

--- a/.github/workflows/ycai_pull_request.yml
+++ b/.github/workflows/ycai_pull_request.yml
@@ -5,13 +5,16 @@ on:
     branches:
       - daily
       - beta
+    paths:
+      - "shared/**"
+      - "YCAI/**"
 
 defaults:
   run:
     working-directory: YCAI
 
 jobs:
-  install:
+  pull_request:
     runs-on: ubuntu-latest
 
     steps:
