chore: backend pr also for daily branch

--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches:
       - master
+      - beta
+      - daily
     paths:
       - "shared/**"
       - "backend/**"
