--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -1,9 +1,14 @@
-name: Pull Request
+name: Backend - Pull Request
 
 on:
   pull_request:
     branches:
       - master
+      - beta
+      - daily
+    paths:
+      - "shared/**"
+      - "backend/**"
 
 jobs:
   # install:
