--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "composite": true,
     "outDir": "./build",
-    "baseUrl": "./src",
+    "baseUrl": "./",
+    "rootDir": "./src",
     "tsBuildInfoFile": "./build/.tsbuildinfo"
   },
   "include": ["./src"]
