--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,19 @@ version: "3"
 # to restore a dump from folder
 # docker-compose exec -T mongo mongorestore /dump
 services:
+  base:
+    build:
+      context: .
+      target: build
+    scale: 0
+
   mongo:
     image: mongo:latest
     restart: always
     ports:
       - "27017:27017"
     volumes:
-      - ./dump:/dump/
+      - ./backend/dump:/dump/
 
   mongo-indexes:
     image: mongo
@@ -18,16 +24,16 @@ services:
     links:
       - mongo
     volumes:
-      - ./scripts:/scripts
+      - ./backend/scripts:/scripts
     command: mongo --host mongo /scripts/build-indexes.js
     depends_on:
       - mongo
 
   api:
-    build:
-      context: .
+    image: yttrex_base
+    container_name: api
     ports:
-      - "9000:9000"
+      - "9002:9002"
     environment:
       DEBUG: "*,-body-parser*,-express*,-follow-redirects"
       key: my-dev-key
@@ -35,14 +41,22 @@ services:
     links:
       - mongo
     volumes:
-      - ./bin:/app/bin
-      - ./config:/app/config
-      - ./endpoints:/app/endpoints
-      - ./lib:/app/lib
-      - ./models:/app/models
-      - ./parsers:/app/parsers
-      - ./routes:/app/routes
-      - ./package.json:/app/package.json
+      - ./shared:/app/shared
+      - ./backend:/app/backend/
+    depends_on:
+      - mongo
+    working_dir: /app/backend
+    command: npm run watch
+
+  ycai:
+    image: yttrex_base
+    ports:
+      - "4005:4005"
+    volumes:
       - ./tsconfig.json:/app/tsconfig.json
-    working_dir: /app
+      - ./shared:/app/shared
+      - ./YCAI:/app/YCAI
+    working_dir: /app/YCAI
+    depends_on:
+      - api
     command: npm run watch
