--- a/YCAI/.env.production
+++ b/YCAI/.env.production
@@ -4,7 +4,7 @@ BUNDLE_TARGET=chrome
 
 # app env
 PUBLIC_URL=/
-REACT_APP_API_URL=https://youchoose.tracking.exposed/api
-REACT_APP_WEB_URL=https://youchoose.tracking.exposed
-REACT_APP_DATA_DONATION_FLUSH_INTERVAL=20000
-REACT_APP_LOGGER=@ycai:*
+API_URL=https://youchoose.tracking.exposed/api
+WEB_URL=https://youchoose.tracking.exposed
+DATA_DONATION_FLUSH_INTERVAL=20000
+LOGGER=@ycai:*
