--- a/YCAI/.env
+++ b/YCAI/.env
@@ -4,9 +4,7 @@ BUNDLE_ENABLE_NOTIFY=false
 
 # app env
 PUBLIC_URL=http://localhost:3000
-REACT_APP_API_URL=http://localhost:9000/api
-REACT_APP_WEB_URL=http://localhost:3000
-REACT_APP_DATA_DONATION_FLUSH_INTERVAL=10000
-REACT_APP_LOGGER=@ycai:*
-
-DISABLE_ESLINT_PLUGIN=true
+API_URL=http://localhost:9000/api
+WEB_URL=http://localhost:3000
+DATA_DONATION_FLUSH_INTERVAL=10000
+LOGGER=@ycai:*
