fix: revert transpilation of backend code
this implementation was a proof of concept but it's too flaky
and not needed at the moment

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,9 +5,9 @@
     "strict": false,
     "rootDir": "./",
     "baseUrl": "./",
-    "outDir": "./build",
+    "noEmit": true,
     "paths": {
-      "@shared/*": ["../shared/*"]
+      "@shared/*": ["../shared/src/*"]
     }
   },
   "include": ["./bin", "./lib", "./parsers", "./routes", "./utils"],
