--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,15 @@
   "version": "1.7.5",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "key=fuffa DEBUG=*,-express:*,-body-parser:*,-follow-redirects node_modules/.bin/ts-node-dev --respawn --transpile-only bin/server.js",
-    "start": "gitlog=`git log -30 --stat --oneline --decorate --graph` DEBUG=*,-body-parser:*,-express:*,-lib:*,-follow-redirects ts-node bin/server",
+    "watch": "key=fuffa DEBUG=*,-express:*,-body-parser:*,-follow-redirects node_modules/.bin/ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server.js",
+    "start": "gitlog=`git log -30 --stat --oneline --decorate --graph` DEBUG=*,-body-parser:*,-express:*,-lib:*,-follow-redirects ts-node -r tsconfig-paths/register bin/server",
     "parserv": "DEBUG=*,-pubtimeAPI node_modules/.bin/ts-node bin/parserv2.js",
     "parserv:watch": "DEBUG=*,-pubtimeAPI node_modules/.bin/ts-node-dev --respawn --transpile-only bin/parserv2.js",
     "leaveserv": "DEBUG=* node bin/leaveserv.js",
     "leaveserv:watch": "DEBUG=* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/leaveserv.js",
     "test": "mocha --require ts-node/register tests/basic/*",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
-    "build": "tsc --build",
-    "build:watch": "tsc --build -w"
+    "type-check": "tsc"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
@@ -47,6 +46,7 @@
     "mocha": "^9.1.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.4.4"
   }
 }
