progress in: events, fullsave, mongodb 5.x, removed bluebird

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -3,7 +3,8 @@
       "supporters": "supporters",
       "stats": "trexstats",
       "htmls": "htmls",
-      "metadata": "metadata"
+      "metadata": "metadata",
+      "full": "full"
   },
 
   "mongoHost": "localhost",
