--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tktrex-backend",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "description": "tiktok.tracking.exposed → backend data collector, to investigate personalization algorithms",
   "scripts": {
     "watch": "key=fuffa DEBUG=*,-express:*,-body-parser:* nodemon --config config/nodemon.json bin/server",
@@ -10,7 +10,7 @@
   "author": "https://github.com/tracking-exposed/tktrex/graphs/contributors",
   "license": "AGPL-3.0",
   "dependencies": {
-    "bluebird": "^3.7.2",
+    "mongodb": "^4.1.4",
     "body-parser": "^1.19.0",
     "bs58": "^3.1.0",
     "cookie": "^0.3.1",
@@ -23,8 +23,6 @@
     "lodash": "^4.17.21",
     "mocha": "^5.2.0",
     "moment": "^2.29.1",
-    "mongodb2": "npm:mongodb@^2.1.8",
-    "mongodb3": "npm:mongodb@3.2.3",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-fetch": "^2.6.1",
