--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "parserv:watch": "DEBUG=*,-pubtimeAPI node_modules/.bin/ts-node-dev --respawn --transpile-only bin/parserv2.js",
     "leaveserv": "DEBUG=* node bin/leaveserv.js",
     "leaveserv:watch": "DEBUG=* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/leaveserv.js",
-    "test": "mocha --require ts-node/register tests/basic/*",
+    "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc"
   },
@@ -42,8 +42,9 @@
     "tweetnacl": "^0.14.3"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.1.3",
+    "@types/jest": "^27.0.3",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
