--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,11 +6,12 @@
     "rootDir": "./",
     "baseUrl": "./",
     "noEmit": true,
+    "esModuleInterop": true,
     "paths": {
       "@shared/*": ["../shared/src/*"]
     }
   },
-  "include": ["./bin", "./lib", "./parsers", "./routes", "./utils"],
+  "include": ["./bin", "./lib", "./parsers", "./routes", "./utils", "./tests"],
   "exclude": ["./tests"],
   "watchOptions": {
     "watchFile": "useFsEvents",
