--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -43,7 +43,6 @@ jobs:
   #         path: "**/node_modules"
   #         key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
-
   # lint:
   #   runs-on: ubuntu-latest
   #   needs: [install]
@@ -79,7 +78,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [12.x, 14.x]
     defaults:
       run:
         working-directory: ./backend
@@ -87,6 +86,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install node_modules
+        working-directory: ./
         run: npm install
 
       - name: Test
