--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/jest": "^27.0.3",
+    "@types/nconf": "^0.10.1",
     "debug": "^4.3.2",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
