--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "@types/nconf": "^0.10.1",
     "debug": "^4.3.2",
     "jest": "^27.3.1",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
