feat: youchoose api routes test

--- a/.github/workflows/backend_pull_request.yml
+++ b/.github/workflows/backend_pull_request.yml
@@ -102,6 +102,6 @@ jobs:
         run: npm install
 
       - name: Test
-        run: npm test
+        run: npm test -- --runInBand --forceExit
         env:
           CI: true
