--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "clean": "cd shared && npm run clean && cd ../YCAI && npm run clean",
     "lint": "cd backend && npm run lint && cd ../YCAI && npm run lint",
+    "test": "jest",
     "preinstall": "cd shared && npm i && cd ../backend && npm i && cd ../YCAI && npm i"
   },
   "devDependencies": {
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "jest": "^27.4.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   },
   "husky": {
     "hooks": {
