--- a/shared/package.json
+++ b/shared/package.json
@@ -15,5 +15,9 @@
     "ts-io-error": "^2.0.0",
     "typelevel-ts": "^0.4.0",
     "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "fast-check": "^2.20.0",
+    "fast-check-io-ts": "^0.5.0"
   }
 }
