--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -76,6 +76,7 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
+    "webpack-plugin-serve": "^1.5.0",
     "zenroom": "^2.2.1"
   },
   "dependencies": {
