feat: split webpack config

--- a/YCAI/.env.production
+++ b/YCAI/.env.production
@@ -7,4 +7,4 @@ PUBLIC_URL=/
 API_URL=https://youchoose.tracking.exposed/api
 WEB_URL=https://youchoose.tracking.exposed
 DATA_DONATION_FLUSH_INTERVAL=20000
-LOGGER=@ycai:*
+DEBUG=@yttrex:*
