--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -16,9 +16,12 @@
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
+    "build:ext": "tsc --build && NODE_ENV=production webpack -c webpack.extension.config.js",
+    "build:ext:dev": "tsc --build && webpack -c webpack.extension.config.js",
     "build": "tsc --build && NODE_ENV=production webpack",
-    "build:dev": "webpack",
-    "watch": "webpack -w",
+    "build:dev": "tsc --build && webpack",
+    "watch:ext": "webpack -c webpack.extension.config.js -w",
+    "watch": "webpack serve",
     "watch:prod": "DOTENV_CONFIG_PATH=.env.production webpack -w",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
@@ -93,7 +96,7 @@
     "bs58": "^4.0.1",
     "c3": "^0.7.20",
     "date-fns": "^2.25.0",
-    "debug": "^4.3.2",
+    "debug": "^4.3.3",
     "fp-ts": "^2.11.5",
     "i18next": "^21.4.0",
     "io-ts": "^2.2.16",
