--- a/YCAI/.env
+++ b/YCAI/.env
@@ -7,4 +7,4 @@ PUBLIC_URL=http://localhost:3000
 API_URL=http://localhost:9000/api
 WEB_URL=http://localhost:3000
 DATA_DONATION_FLUSH_INTERVAL=10000
-LOGGER=@ycai:*
+DEBUG=@yttrex:*
